# rama-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md  default.nix  flake.nix  jolt.nix  justfile
include/rama/: engine.hpp  physics3d.hpp  scripting.hpp  types.hpp
src/: engine.cpp  engine.hpp  physics2d.cpp  physics2d.hpp  physics3d.cpp  physics3d.hpp  scripting.cpp  scripting.hpp
